# AI-Waifu-Vtuber-rs

./: .gitignore  .gitmodules  Cargo.toml  README.md  TODO.md  config.example.json  config.json.init  requirements.txt  start_services.ps1
external_services/: .gitignore  README.md  requirements.txt  start_jp-voice-example.sh  start_llama.ps1  start_llama.sh  start_silerio-example.sh  start_silerio.ps1  start_silerio.sh  start_tss-openai-whisper-example.sh  start_tss-openai-whisper.sh  start_tss.ps1
external_services/jp-voice/: index.html  main.py
pymodules/: TTS.py  convert_pt_to_torchscript_model.py
src/: ai_translated_request.rs  audio_dev.rs  audio_halpers.rs  chatgpt.rs  chatgpt_en_deeplx_builder.rs  config.rs  deeplx_translate.rs  deeplx_translate_owned.rs  discord_text_control.rs  dispatcher.rs  dummy_ai.rs  google_translator.rs  handler.rs  jp_tts.rs  lib.rs  llama.rs  llama_client.rs  llama_en_deeplx_builder.rs  main.rs  num2words.rs  receiver.rs  request.rs  silerio_tts.rs  silerio_tts_local.rs  start_external_services.rs  tts_engine.rs  urukhan_voice_recognize.rs  whisper_voice_recognize.rs
src/llama/: completion_req.rs  converse.rs  llama_client.rs  mod.rs  model_config.rs
src/utils/: audio_dev.rs  audio_halpers.rs  audio_input.rs  chatgpt_builder.rs  chatgpt_en_deeplx_builder.rs  chatgpt_raw_builder.rs  llama_en_deeplx_builder.rs  mod.rs  say.rs  test_request.rs
tests/: test_num_replace.rs  test_play_wav.rs  test_serde_json_enum.rs  test_stream_resp.rs  test_translator.rs  test_tts.rs
