[package]
name = "ai-waifu-bot"
version = "0.1.0"
authors = ["Lolka_097"]
edition = "2021"

[dependencies]
google_translator="0.2.2"
serde = "^1.0"
serde_json = "^1.0"

rand = "0.8"
tracing = "0.1"
tracing-subscriber = "0.2"
tracing-futures = "0.2"
songbird = { version = "0.3.2" }
serenity = { version = "0.11", features = [
    "cache",
    "framework",
    "collector",
    "standard_framework",
    "voice",
    "http",
    "utils",
    "rustls_backend"] }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
async-trait = "0.1"
chatgpt_rs = { version = "1.1.1" }
regex = "1.7"
reqwest = "0.11"
maplit = "1"
rodio = { version = "0.17", default-features = false, features = ["wav"] }
bytes = "1.0"
cpal = "0.15"
clap = "4.2"
hound = "3.5"

[lib]
name = "ai_waifu"

[[bin]]
name = "ai-waifu-discord-bot"

[[bin]]
name = "ai-waifu-interactive"
