[package]
name = "ai-waifu-bot"
version = "0.3.0"
authors = ["Lolka_097"]
edition = "2021"

[dependencies]
# common
google_translator="0.2.2"
serde = "^1.0"
serde_json = "^1.0"
regex = "1.7"
reqwest = "0.11"
maplit = "1"
bytes = "1.0"
clap = "4.2"
rand = "0.8"
#coinnect = "0.5.10"

# tracing
tracing = "0.1"
tracing-subscriber = "0.2"
tracing-futures = "0.2"

# discord
songbird = { version = "0.3.2" }
serenity = { version = "0.11", features = [
    "cache",
    "framework",
    "collector",
    "standard_framework",
    "voice",
    "http",
    "utils",
    "rustls_backend"] }

# async
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
async-trait = "0.1"

# chatGPT
chatgpt_rs = { version = "1.1.1" }

# LLaMa
#llama-rs = {git = "https://github.com/rustformers/llama-rs.git"}

# Audio
rodio = { version = "0.17", default-features = false, features = ["wav"] }
cpal = "0.15"
hound = "3.5"
noise-gate = { git = "https://github.com/Michael-F-Bryan/noise-gate.git" }
dasp = "0.11.0"
dagc = "0.1"


[lib]
name = "ai_waifu"

[[bin]]
name = "ai-waifu-discord-bot"

[[bin]]
name = "ai-waifu-interactive"
