[package]
name = "ai-waifu-bot"
version = "0.5.0"
authors = ["Lolka_097"]
edition = "2021"

[dependencies]
# common
google_translator="0.2.2"
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
regex = "1.7"
reqwest = "0.11"
maplit = "1"
bytes = "1.0"
clap = "4.2"
rand = "0.8"
chrono = "0.4"
derive_builder="0.12"
num2words = "0.4.1"
lazy_static = "1.4"
brotli = "3.3"

# tracing
tracing = "0.1"
tracing-subscriber = "0.2"
tracing-futures = "0.2"

# discord
songbird = { version = "0.3.2" }
serenity = { version = "0.11", features = [
    "cache",
    "framework",
    "collector",
    "standard_framework",
    "voice",
    "http",
    "utils",
    "rustls_backend"] }

# async
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
async-trait = "0.1"
proc-macro2 = "1.0.66" # https://github.com/rust-lang/rust/issues/113152#issuecomment-1612580132

# chatGPT
chatgpt_rs = "1.1.13"

# Audio
rodio = { version = "0.17", default-features = false, features = ["wav"] }
cpal = "0.15"
hound = "3.5"
noise-gate = { git = "https://github.com/Michael-F-Bryan/noise-gate.git" }
dasp = "0.11.0"
dagc = "0.1"

# interactive input
rustyline-async = { version = "0.3.2", default-features = false }
futures-util="0.3"

# twitch irc
twitch-irc = "5"


[lib]
name = "ai_waifu"

[[bin]]
name = "ai-waifu-discord-bot"

[[bin]]
name = "ai-waifu-interactive"

[[bin]]
name = "ai-waifu-twitch-bot"

[[bin]]
name = "stt-test"
